--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>monkey page</title>
+        <title>gracias freddy</title>
         <link rel="stylesheet" href="style.css">
   </head>
     <body>
