--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
     <body>
       <h1>
-        welcome to monkey page
+        gracias freddy por tan buen contenido
       </h1>
       <div id="asi">
         <p>
