--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
     <body>
       <h1>
-          gracias <a href="https://la-secta-de-freddy.glitch.me/">freddy</a> por tan buen contenido
+          gracias <a href="https://la-secta-de-freddy.glitch.me/" style="color:white;text-decoration: none;">freddy</a> por tan buen contenido
       </h1>
       <div id="asi">
         <p>
