--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
   </head>
     <body>
+      <!--si ves esto dale click a freddy-->
       <h1>
           gracias <a href="https://la-secta-de-freddy.glitch.me/" style="color:white;text-decoration: none;">freddy</a> por tan buen contenido
       </h1>
