--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>welcome to </title>
+        <title>monkey page </title>
         <link rel="stylesheet" href="style.css">
   </head>
     <body>
       <!--si ves esto dale click a freddy-->
       <h1>
-          gracias <a href="https://la-secta-de-freddy.glitch.me/" style="color:white;text-decoration: none;">freddy</a> por tan buen contenido
+          welcome to 
       </h1>
       <div id="asi">
         <p>
